tests/ui/const-generics/mgca/explicit_anon_consts.stderr
error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:8:41
   |
LL | type Adt3<const N: usize> = Foo<const { N }>;
   |                                         ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:16:42
   |
LL | type Arr3<const N: usize> = [(); const { N }];
   |                                          ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:25:27
   |
LL |     let _3 = [(); const { N }];
   |                           ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:37:46
   |
LL | const ITEM3<const N: usize>: usize = const { N };
   |                                              ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:55:31
   |
LL |     T3: Trait<ASSOC = const { N }>,
   |                               ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/explicit_anon_consts.rs:64:58
   |
LL | struct Default3<const N: usize, const M: usize = const { N }>;
   |                                                          ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments here, i.e. `N`
   = help: add `#![feature(generic_const_exprs)]` to allow generic const expressions

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:10:33
   |
LL | type Adt4<const N: usize> = Foo<{ 1 + 1 }>;
   |                                 ^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:18:34
   |
LL | type Arr4<const N: usize> = [(); 1 + 1];
   |                                  ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:27:19
   |
LL |     let _4 = [(); 1 + 1];
   |                   ^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:40:38
   |
LL | const ITEM4<const N: usize>: usize = { 1 + 1 };
   |                                      ^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:57:23
   |
LL |     T4: Trait<ASSOC = { 1 + 1 }>,
   |                       ^^^^^^^^^

error: complex const arguments must be placed inside of a `const` block
  --> $DIR/explicit_anon_consts.rs:66:50
   |
LL | struct Default4<const N: usize, const M: usize = { 1 + 1 }>;
   |                                                  ^^^^^^^^^

error: aborting due to 12 previous errors

